# EdgeVisionRT

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/edgevisionrt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/example/edgevisionrt/: MainActivity.kt
app/src/main/java/com/example/edgevisionrt/camera/: CameraManager.kt
app/src/main/java/com/example/edgevisionrt/gl/: GLRenderer.kt
app/src/main/java/com/example/edgevisionrt/utils/: ImageProcessor.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgevisionrt/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package-lock.json  package.json
web/src/: viewer.ts
